[project]
name = "aidseant"
version = "0.0.1"
description = "can we sim a transport net from nout"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
classifiers = [
"Development Status :: 3 - Alpha",
"Programming Language :: Python :: 3",
]
dependencies = []
[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"